--- a/pages/article.html
+++ b/pages/article.html
@@ -5,8 +5,6 @@
   <link rel="shortcut icon" href="../assets/images/image.jpg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
   <title>Page</title>
   <link rel="stylesheet" href="../assets/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../styles/style.css">
@@ -89,7 +87,7 @@
   <main>
     <div class="tabs">
       <div class="tab-buttons">
-        <button class="tab-button active" data-tab="tab1"><a href="tabs-html.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></button>
+        <button class="tab-button active" data-tab="tab1" id="back-to-html"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
         <button class="tab-button" data-tab="tab2">CSS</button>
         <button class="tab-button" data-tab="tab3">JS</button>
         
@@ -102,212 +100,22 @@
           </div>
         </div>
       </div>
-<!-- HTML содержание -->
+
       <div class="tab-content active" id="tab1">
         <div id="article">
           <p class="loading">Загрузка статьи...</p>
         </div>
       </div>
 
-<!-- CSS содержание -->
-      <div class="tab-content" id="tab2">
-        <h2><i class="fa fa-css3" aria-hidden="true"></i> Введение в CSS</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css1-1">Что такое CSS и зачем он нужен.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css1-2">Основные способы подключения CSS: <code >inline</code>, <code>internal</code>, <code>external</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css1-3">Основные синтаксические правила CSS.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css1-4">Основные понятия: селекторы, свойства, значения.</a></li>
-        </ul>
+      <div class="tab-content" id="tab2"></div>
 
-        <h2>Базовые стили</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css2-1">Работа с текстом: <code>font-size</code>, <code>font-family</code>, <code>font-weight</code>, <code>text-align</code>, <code>text-transform</code>, <code>line-height</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css2-2">Цвета и фон: <code>color</code>, <code>background-color</code>, <code>background-image</code>, <code>opacity</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css2-3">Отступы и поля (<code>margins</code> и <code>padding)</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css2-4">Бордеры и их свойства: <code>border</code>, <code>border-radius</code>.</a></li>
-        </ul>
+      <div class="tab-content" id="tab3"></div>
 
-        <h2>Селекторы в CSS</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css3-1">Простые селекторы: по тегам, классам, идентификаторам.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css3-2">Комбинированные селекторы: потомки, дети, соседние элементы.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css3-3">Псевдоклассы: <code>:hover</code>, <code>:focus</code>, <code>:active</code>, <code>:nth-child()</code>, <code>:last-child()</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css3-4">Псевдоэлементы: <code>::before</code>, <code>::after</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css3-5">Атрибутные селекторы.</a></li>
-        </ul>
+      <div class="tab-content" id="tab4"></div>
 
-        <h2>Работа с блоками и макетом</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css4-1">Блочные и строчные элементы.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css4-2">Свойства <code>display: block</code>, <code>inline-block</code>, <code>none</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css4-3">Модель блочной коробки (Box Model).</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css4-4">Введение в Flexbox: контейнер и элементы.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css4-5">Введение в CSS Grid: работа с сетками.</a></li>
-        </ul>
+      <div class="tab-content" id="tab5"></div>
 
-        <h2>Позиционирование элементов</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css5-1">Статичное, относительное, абсолютное и фиксированное позиционирование.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css5-2">Свойства <code>top</code>, <code>right</code>, <code>bottom</code>, <code>left</code>, <code>z-index</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css5-3">Современные макеты с помощью Flexbox и Grid.</a></li>
-        </ul>
-
-        <h2>Адаптивный дизайн</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css6-1">Введение в адаптивную верстку.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css6-2">Использование медиа-запросов (<code>@media</code>) для различных устройств.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css6-3">Основы подхода "Mobile First".</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css6-4">Работа с резиновыми единицами: <code>em</code>, <code>rem</code>, <code>vw</code>, <code>vh</code>, <code>%</code>.</a></li>
-        </ul>
-
-        <h2>Трансформации и анимации</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css7-1">Трансформации: <code>transform</code>, <code>translate</code>, <code>rotate</code>, <code>scale</code>, <code>skew</code>.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css7-2">Переходы: <code>transition</code>, как задать временные интервалы и задержки.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css7-3">Анимации: свойство <code>animation</code>, ключевые кадры <code>@keyframes</code>.</a></li>
-        </ul>
-
-        <h2>Практика: Стилизация веб-страницы</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css8-1">Создание простого макета сайта с помощью Flexbox.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css8-2">Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css8-3">Адаптация сайта под разные устройства с помощью медиа-запросов.</a></li>
-        </ul>
-
-        <h2>Углубление: CSS-переменные и препроцессоры</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css9-1">Использование CSS-переменных (<code>--var</code> и <code>var()</code>).</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css9-2">Введение в препроцессоры: Sass, LESS (основные концепции).</a></li>
-        </ul>
-
-        <h2>Продвинутые темы</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css10-1">CSS Grid для сложных макетов.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css10-2">Переменные и каскадность.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css10-3">Углубленное использование псевдоклассов и псевдоэлементов.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css10-4">Оптимизация производительности CSS.</a></li>
-        </ul>
-
-        <h2>Практика: Создание полноценного макета</h2>
-        <ul>
-          <li>Разработка многостраничного адаптивного сайта с использованием всех пройденных техник.</li>
-          <li>Улучшение дизайна через экспериментирование с CSS-анимациями, трансформациями и эффектами.</li>
-        </ul>
-
-        <h2>Поддержка кроссбраузерности</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-css.html?slug=css12-1">Как тестировать стили в разных браузерах.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css12-2">Использование автопрефиксеров.</a></li>
-          <li><a class="pagesLinks" href="article-css.html?slug=css12-3">Инструменты для тестирования и отладки.</a></li>
-        </ul>
-
-        <h2>Ресурсы для углубления знаний</h2>
-        <ul>
-          <li><a class="pagesLinks" href="https://developer.mozilla.org/ru/docs/Web/CSS" target="_blank">MDN Web Docs: CSS</a></li>
-          <li><a class="pagesLinks" href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
-          <li><a class="pagesLinks" href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp: CSS</a></li>
-          <li><a href="https://codepen.io/" target="_blank">CodePen</a> + <a href="https://www.frontendmentor.io/">Frontend Mentor</a>.</li>
-        </ul>
-      </div>
-
-<!-- JavaScript содержание -->
-      <div class="tab-content" id="tab3">
-        <h2><i class="fa fa-space-shuttle" aria-hidden="true"></i> Введение в JavaScript и Основы</h2>
-        <ul>
-          <li> <a class="pagesLinks" href="article-js.html?slug=js1-1">Что такое JavaScript и где его применяют</a> </li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-2">Установка среды разработки (VS Code, Node.js)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-3">Подключение JavaScript к HTML-документу</a></li>
-          <li> <a class="pagesLinks" href="article-js.html?slug=js1-4">Введение в синтаксис JavaScript (переменные, типы данных)</a> </li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-5">Операторы и выражения</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-6">Работа с переменными (let, const, var)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-7">Базовые операции с числами и строками</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-8">Основы работы с функциями</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-9">Функции как блоки кода (определение, вызов)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-10">Параметры и возврат значений</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js1-11">Практика: написание простых функций и выполнение арифметических операций</a></li>
-        </ul>
-
-        <h2>Управление потоком и основы массивов</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-1">Условные операторы (if, else, switch)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-2">Логические операторы</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-3">Тернарный оператор</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-4">Циклы (for, while, do...while)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-5">Вложенные циклы и управление потоком (break, continue)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-6">Введение в массивы</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js2-7">Основные методы массивов (push, pop, shift, unshift)</a></li>
-          <li>Практика: создание простых программ с использованием циклов и массивов</li>
-        </ul>
-      
-        <h2>Работа с объектами и обработка ошибок</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-js.html?slug=js3-1">Введение в объекты</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js3-2">Создание и доступ к свойствам объектов</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js3-3">Методы объектов</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js3-4">Введение в обработку ошибок</a></li>
-          <li><a class="pagesLinks "href="article-js.html?slug=js3-5">Конструкции try, catch, finally</a></li>
-          <li>Создание собственных ошибок (throw)</li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js3-7">Глубокое копирование и сравнение объектов</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js3-8">Прототипы и наследование</a></li>
-          <li>Практика: создание и работа с объектами, реализация простых методов</li>
-        </ul>
-
-        <h2>Работа с DOM и событиями</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-1">Введение в Document Object Model (DOM)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-2">Поиск и манипуляция элементами DOM (getElementById, querySelector)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-3">Изменение стилей и содержимого элементов</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-4">Работа с событиями (click, input, submit)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-5">Использование addEventListener для управления событиями</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-6">Создание и удаление элементов DOM</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js4-7">Работа с формами и валидация данных</a></li>
-          <li>Практика: создание интерактивной веб-страницы с обработкой событий</li>
-        </ul>
-
-        <h2>Асинхронное программирование и работа с API</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-1">Введение в асинхронное программирование</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-2">Использование setTimeout и setInterval</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-3">Введение в промисы (Promises)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-4">Работа с async/await</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-5">Обработка ошибок в асинхронном коде</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-6">Введение в работу с API</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-7">Отправка запросов и получение данных (fetch, axios)</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js5-8">Практика: работа с API, получение данных и отображение их на странице</a></li>
-        </ul>
-
-        <h2>Завершение и проект</h2>
-        <ul>
-          <li><a class="pagesLinks" href="article-js.html?slug=js6-2">Решение задач на алгоритмы и логику</a></li>
-          <li>Планирование проекта: создание ТЗ</li>
-          <li>Начало работы над финальным проектом (простое веб-приложение)</li>
-          <li>Продолжение работы над проектом</li>
-          <li>Реализация основных функций и взаимодействие с DOM и API</li>
-          <li>Завершение проекта и презентация (самостоятельная проверка и доработка)</li>
-        </ul>
-
-        <h2>Прочие ссылки</h2>
-        <ul>
-          <li>Онлайн-курсы: <a class="pagesLinks" href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a>, <a class="pagesLinks" href="https://www.codecademy.com/" target="_blank">Codecademy</a>, <a href="https://learn.javascript.ru/" target="_blank">JavaScript.info</a> </li>
-          <li>Книги: "Eloquent JavaScript" Марейн Хавербеке, "JavaScript: The Good Parts" Дуглас Крокфорд</li>
-          <li>Практические задания: <a href="https://leetcode.com//" target="_blank">LeetCode</a> , <a href="https://www.codewars.com/">Codewars</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js-localbase">Локальный сервер и локальная база</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js-sandbox">Песочница</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js-massiv">Массивы</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js-objects">Объекты</a></li>
-          <li><a class="pagesLinks" href="article-js.html?slug=js-cycle">Циклы</a></li>
-        </ul>
-      </div>
-
-      <div class="tab-content" id="tab4">
-        <p>Тут будут статьи PostgreSQL.</p>
-      </div>
-      <div class="tab-content" id="tab5">
-        <p>Тут будут статьи React.</p>
-      </div>
-      <div class="tab-content" id="tab6">
-        <p>Тут будут статьи Next.</p>
-      </div>
+      <div class="tab-content" id="tab6"></div>
     </div>
   </main>
   
